Modify TODO list

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 * Orientation Issues
   * Currently the orientation is set to portarit. But want to fix the orientation without this.
+* Add test cases
 * Some UI cleanup
+
